welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: a is already defined as value a
    case (a,a) =>0
            ^