welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  (a,b) match {
    case (a,a) =>0
    case (a,b) if Math.abs(a-10)<Math.abs(b-10) => a
    case (a,b) if Math.abs(a-10)>Math.abs(b-10) => b
  }
}